[project]
name = "weather"
version = "0.1.0"
description = "Weather Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
]
